[gd_scene load_steps=7 format=3 uid="uid://daot3d38xs16x"]

[ext_resource type="Texture2D" uid="uid://q5dkyxf1dymv" path="res://art/ChatGPT Image 7 avr. 2025, 21_35_43.png" id="1_4had8"]
[ext_resource type="PackedScene" uid="uid://bbjgndmg1hct" path="res://scene/player.tscn" id="1_5d276"]
[ext_resource type="Script" uid="uid://78hdlsmnxgar" path="res://script/comptoir.gd" id="2_vlpfx"]
[ext_resource type="Texture2D" uid="uid://vi4fiavtscqw" path="res://art/ChatGPT_Image_7_avr._2025__21_46_46-removebg-preview.png" id="4_4had8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlpfx"]
size = Vector2(204, 131)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4had8"]
size = Vector2(143, 93)

[node name="café" type="Node2D"]

[node name="Sol" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(641, 362)
scale = Vector2(0.830729, 0.705078)
texture = ExtResource("1_4had8")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_top = -1.0
offset_right = 1280.0
offset_bottom = 719.0

[node name="player" parent="." instance=ExtResource("1_5d276")]
position = Vector2(110, 100)

[node name="Comptoir" type="Area2D" parent="."]
position = Vector2(48, 71)
script = ExtResource("2_vlpfx")

[node name="Sprite2D" type="Sprite2D" parent="Comptoir"]
position = Vector2(792, 361.5)
scale = Vector2(0.601307, 0.629902)
texture = ExtResource("4_4had8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Comptoir"]
position = Vector2(823, 393.5)
shape = SubResource("RectangleShape2D_vlpfx")

[node name="StaticBody2D" type="StaticBody2D" parent="Comptoir"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Comptoir/StaticBody2D"]
position = Vector2(818.5, 394.5)
shape = SubResource("RectangleShape2D_4had8")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InteractionPanel" type="Panel" parent="UI"]
visible = false
offset_left = 784.0
offset_top = 364.0
offset_right = 1001.0
offset_bottom = 398.0

[node name="Label" type="Label" parent="UI/InteractionPanel"]
layout_mode = 0
offset_right = 215.0
offset_bottom = 33.0
text = "Appuie sur E pour interagir"

[node name="ChoicePanel" type="Panel" parent="UI"]
visible = false
anchors_preset = -1
anchor_right = 0.204
anchor_bottom = 0.318
offset_left = 783.0
offset_top = 368.0
offset_right = 588.88
offset_bottom = 213.04

[node name="BtnCafe" type="Button" parent="UI/ChoicePanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 43.0
offset_right = 42.0
offset_bottom = 74.0
text = "café"

[node name="BtnBeignet" type="Button" parent="UI/ChoicePanel"]
layout_mode = 0
offset_right = 67.0
offset_bottom = 31.0
text = "Beignet"

[connection signal="pressed" from="UI/ChoicePanel/BtnCafe" to="Comptoir" method="_on_btn_cafe_pressed"]
[connection signal="pressed" from="UI/ChoicePanel/BtnBeignet" to="Comptoir" method="_on_btn_beignet_pressed"]
